test/rbkt/Queries/zorba/syntax_errors/missing_semicolon_1.xq
(: 
  Syntax error with an improved error message:
  missing semicolon ";" and the location
:)

declare variable $var1 := 1;
declare variable $var2 := 2
declare variable $var3 := 3;
declare variable $var4 := 4;

$var1
